# brew65

./: .envrc  .gitignore  .gitmodules  CMakeLists.txt  emulator.sh  flake.nix
emulator/include/brew65emu/components/: io_decoder.h  memory.h
emulator/include/brew65emu/interface/: panel.h  renderer.h
emulator/include/brew65emu/tools/: disassembler.h
emulator/lib/: CMakeLists.txt
emulator/src/: CMakeLists.txt  main.cpp  shell.html
emulator/src/brew65emu/components/: io_decoder.cpp  memory.cpp
emulator/src/brew65emu/interface/: panel.cpp  renderer.cpp
emulator/src/brew65emu/tools/: disassembler.cpp
